<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_easy" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_medium" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_hard" />
    
    <Button
        android:id="@+id/btnTough"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_tough" />
    
</LinearLayout>
