<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="128dp"
                    android:paddingTop="8dp"
                    android:text="@string/level_easy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/btnRestEasy"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvEasy_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/easy_1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvEasy_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/easy_2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvEasy_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/easy_3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="100dp"
                    android:paddingTop="8dp"
                    android:text="@string/level_medium"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/btnRestMedium"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvMedium_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/medium_1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvMedium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/medium_2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvMedium_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/medium_3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="128dp"
                    android:paddingTop="8dp"
                    android:text="@string/level_hard"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/btnRestHard"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvHard_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/hard_1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvHard_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/hard_2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvHard_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/hard_3"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvTough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="128dp"
                    android:paddingTop="8dp"
                    android:text="@string/level_tough"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/btnRestTough"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTough_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/tough_1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvTough_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/tough_2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvTough_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="48dp"
                android:text="@string/tough_3"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>