<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/cbAutoCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_check" />

    <CheckBox
        android:id="@+id/cbAutoHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_help" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSelectAll"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:text="@string/button_select_all" />

        <Button
            android:id="@+id/btnRemove"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnSelectAll"
            android:text="@string/button_remove" />

        <TextView
            android:id="@+id/tvSavedGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/saved_games"
            android:textAppearance="?android:attr/textAppearanceMedium" />

	</RelativeLayout>
	
    <ListView
        android:id="@+id/lvSavedGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
